crates/provider-imap/src/snapshots/mxr__mxr_provider_imap__parse__tests__imap_fixture__folded-flowed.snap
---
source: crates/provider-imap/src/parse.rs
expression: "json!({\n    \"subject\": synced.envelope.subject, \"from\": synced.envelope.from, \"to\":\n    synced.envelope.to, \"cc\": synced.envelope.cc, \"message_id\":\n    synced.envelope.message_id_header, \"unsubscribe\":\n    format!(\"{:?}\", synced.envelope.unsubscribe), \"attachment_filenames\":\n    synced.body.attachments.iter().map(|attachment|\n    attachment.filename.clone()).collect::<Vec<_>>(), \"calendar\":\n    synced.body.metadata.calendar, \"content_language\":\n    synced.body.metadata.content_language, \"auth_results\":\n    synced.body.metadata.auth_results, \"text_plain_format\":\n    format!(\"{:?}\", synced.body.metadata.text_plain_format), \"plain_excerpt\":\n    synced.body.text_plain.as_deref().map(|body|\n    body.lines().take(3).collect::<Vec<_>>().join(\"\\n\")), \"html_present\":\n    synced.body.text_html.is_some(),\n})"
---
attachment_filenames: []
auth_results:
  - mx.example.net; dkim=pass header.d=example.com; spf=pass
calendar: ~
cc:
  - email: dev@example.com
    name: ~
content_language:
  - fr
from:
  email: jose@example.com
  name: José Example
html_present: true
message_id: "<folded-flowed@example.com>"
plain_excerpt: "Hello team,this paragraph is flowed andshould join cleanly.\n\n-- "
subject: Quarterly update — release notes
text_plain_format: "Some(Flowed { delsp: true })"
to:
  - email: team@example.com
    name: Team
  - email: support@example.com
    name: Support List
unsubscribe: "OneClick { url: \"https://example.com/unsubscribe?id=abc123\" }"
