crates/provider-imap/src/snapshots/mxr__mxr_provider_imap__parse__tests__imap_fixture__malformed-minimal.snap
---
source: crates/provider-imap/src/parse.rs
expression: "json!({\n    \"subject\": synced.envelope.subject, \"from\": synced.envelope.from, \"to\":\n    synced.envelope.to, \"cc\": synced.envelope.cc, \"message_id\":\n    synced.envelope.message_id_header, \"unsubscribe\":\n    format!(\"{:?}\", synced.envelope.unsubscribe), \"attachment_filenames\":\n    synced.body.attachments.iter().map(|attachment|\n    attachment.filename.clone()).collect::<Vec<_>>(), \"calendar\":\n    synced.body.metadata.calendar, \"content_language\":\n    synced.body.metadata.content_language, \"auth_results\":\n    synced.body.metadata.auth_results, \"text_plain_format\":\n    format!(\"{:?}\", synced.body.metadata.text_plain_format), \"plain_excerpt\":\n    synced.body.text_plain.as_deref().map(|body|\n    body.lines().take(3).collect::<Vec<_>>().join(\"\\n\")), \"html_present\":\n    synced.body.text_html.is_some(),\n})"
---
attachment_filenames: []
auth_results:
  - mx.example.net; dmarc=pass
calendar: ~
cc: []
content_language: []
from:
  email: alice@example.com
  name: Alice
html_present: false
message_id: ~
plain_excerpt: No explicit content type here.
subject: Missing content type
text_plain_format: None
to:
  - email: ops@example.com
    name: Ops
unsubscribe: None
